Create new Client Done. Add savings accounts in progress.

--- a/mifosng-android/src/main/res/layout/fragment_add_savings_account.xml
+++ b/mifosng-android/src/main/res/layout/fragment_add_savings_account.xml
@@ -15,7 +15,8 @@
     <!-- Actual content -->
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:padding="20dp">
 
         <LinearLayout style="@style/LinearLayout.Base">
 
