--- a/mifosng-android/src/main/res/drawable/ic_baseline_arrow_drop_down.xml
+++ b/mifosng-android/src/main/res/drawable/ic_baseline_arrow_drop_down.xml
@@ -1,5 +1,5 @@
-<vector android:height="70dp" android:tint="@color/black"
+<vector android:height="70dp" android:tint="@color/gray_dark"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="58dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/black" android:pathData="M7,10l5,5 5,-5z"/>
+    <path android:fillColor="@color/gray_dark" android:pathData="M7,10l5,5 5,-5z"/>
 </vector>
