--- a/mifosng-android/src/main/res/layout/item_data_table.xml
+++ b/mifosng-android/src/main/res/layout/item_data_table.xml
@@ -10,6 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    app:cardCornerRadius="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardUseCompatPadding="true">
 
