--- a/mifosng-android/src/main/res/layout/fragment_client.xml
+++ b/mifosng-android/src/main/res/layout/fragment_client.xml
@@ -39,7 +39,7 @@
                 app:srcCompat="@drawable/ic_search_black_24dp" />
 
             <EditText
-                android:id="@+id/et_search"
+                android:id="@+id/et_client_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
