--- a/mifosng-android/src/main/res/layout/fragment_document_list.xml
+++ b/mifosng-android/src/main/res/layout/fragment_document_list.xml
@@ -13,22 +13,52 @@
     tools:context=".online.documentlist.DocumentListFragment">
 
     <TableLayout
-        android:id="@+id/tbl_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:visibility="gone">
 
 
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#ffd1d1d1"
-            android:paddingBottom="8dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="8dp">
+            android:background="@color/white"
+            android:padding="12dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/name"
+                android:gravity="center"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="24dp"
+                android:layout_weight="1"
+                android:text="@string/description"
+                android:gravity="center"
+                android:textStyle="bold"/>
+
+        </TableRow>
+
+    </TableLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/tbl_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:padding="15dp">
 
             <TextView
                 android:id="@+id/name"
@@ -36,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/name"
+                android:gravity="center"
                 android:textStyle="bold"/>
 
             <TextView
@@ -45,11 +76,13 @@
                 android:layout_marginRight="24dp"
                 android:layout_weight="1"
                 android:text="@string/description"
+                android:gravity="center"
                 android:textStyle="bold"/>
 
-        </TableRow>
+        </LinearLayout>
 
-    </TableLayout>
+
+    </androidx.cardview.widget.CardView>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
