--- a/mifosng-android/src/main/res/layout/item_note.xml
+++ b/mifosng-android/src/main/res/layout/item_note.xml
@@ -9,8 +9,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
