--- a/mifosng-android/src/main/res/layout/row_document_list.xml
+++ b/mifosng-android/src/main/res/layout/row_document_list.xml
@@ -5,39 +5,58 @@
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:background="@color/white"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="10dp">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_weight="0.4"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/medium_text"
-        android:id="@+id/tv_doc_name" />
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:layout_gravity="center">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_weight="0.4"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/medium_text"
-        android:id="@+id/tv_doc_descrption" />
+        <TextView
+            android:id="@+id/tv_doc_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="@string/medium_text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <com.joanzapata.iconify.widget.IconTextView
-        android:id="@+id/tv_doc_location_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:shadowColor="#22000000"
-        android:shadowDx="3"
-        android:shadowDy="3"
-        android:shadowRadius="1"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/tv_doc_descrption"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="@string/medium_text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <com.joanzapata.iconify.widget.IconTextView
+            android:id="@+id/tv_doc_location_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:shadowColor="#22000000"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="1"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+    </LinearLayout>
 
 
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
