--- a/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule.xml
+++ b/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule.xml
@@ -4,6 +4,7 @@
   -->
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,9 +20,120 @@
         android:layout_gravity="center" />
 
     <!-- Actual content -->
+
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_loan_repayment_schedule_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
+                <ImageView
+                    android:id="@+id/iv_loan_repayment__schedule_search_icon"
+                    android:layout_width="@dimen/dimension_32_dp"
+                    android:layout_height="@dimen/dimension_32_dp"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_search_black_24dp" />
+
+                <EditText
+                    android:id="@+id/et_loan_repayment__schedule_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_toRightOf="@id/iv_loan_repayment__schedule_search_icon"
+                    android:background="@android:color/transparent"
+                    android:hint="Search..."
+                    android:singleLine="true"
+                    android:textSize="15sp"
+                    tools:ignore="NotSibling"
+                    android:layout_marginEnd="4dp"
+                    android:layout_toEndOf="@id/iv_loan_repayment__schedule_search_icon"
+                    android:layout_marginStart="8dp" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:id="@+id/ll_repayment__schedule_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:layout_below="@+id/cv_loan_repayment_schedule_search"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/tv_title_principal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="@string/loan_status" />
+
+
+            <TextView
+                android:id="@+id/tv_title_interest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/date"
+                android:gravity="center"
+                />
+
+            <TextView
+                android:id="@+id/tv_title_fees"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/loan_amount_due" />
+
+            <TextView
+                android:id="@+id/tv_title_penalties"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="@string/amount_paid" />
+
+
+        </LinearLayout>
+        <ListView
+            android:id="@+id/lv_repayment_schedule"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_repayment__schedule_header"
+            android:layout_above="@+id/flrs_footer"
+            android:scrollbars="none"
+            android:paddingBottom="10dp"
+            />
+        <include
+            android:id="@+id/flrs_footer"
+            layout="@layout/fragment_loan_repayment_schedule_footer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
+   <!-- <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <TableLayout
             android:id="@+id/tbl_header"
@@ -94,5 +206,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true" />
-    </RelativeLayout>
+    </RelativeLayout>-->
 </ViewFlipper>
