--- a/mifosng-android/src/main/res/layout/row_savings_transaction_item.xml
+++ b/mifosng-android/src/main/res/layout/row_savings_transaction_item.xml
@@ -1,46 +1,52 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ This project is licensed under the open source MPL V2.
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingTop="16dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_marginBottom="5dp"
+    app:cardCornerRadius="10dp"
+    app:cardUseCompatPadding="true">
 
-    <TextView
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.35"
-        android:id="@+id/tv_transaction_date"
-        android:text="May 24,2014"
-        android:textColor="@color/black"
-        style="@android:style/TextAppearance.Medium"
-        android:gravity="left"/>
+        android:orientation="horizontal"
+        android:padding="12dp">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.30"
-        android:id="@+id/tv_transaction_type"
-        android:textColor="@color/black"
-        style="@android:style/TextAppearance.Medium"
-        android:text="@string/withdrawal"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/tv_transaction_date"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.35"
+            android:gravity="left"
+            android:text="May 24,2014"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.35"
-        android:id="@+id/tv_transaction_amount"
-        android:textColor="@color/black"
-        style="@android:style/TextAppearance.Medium"
-        android:text="2500 INR"
-        android:gravity="right"/>
+        <TextView
+            android:id="@+id/tv_transaction_type"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.30"
+            android:gravity="center"
+            android:text="@string/withdrawal"
+            android:textColor="@color/black" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_transaction_amount"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.35"
+            android:gravity="right"
+            android:text="2500 INR"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
